구글 홈페이지 (피드백 후 수정)
피드백 내용
  - <h1> 삽입 후 blind 처리
  - <fieldset>, <legend> 삽입
  - <input type='search'> 로 변경
  - <li> > <a> 삽입 / title 속성 수정

--- a/google.css
+++ b/google.css
@@ -55,6 +55,14 @@ body {
     height: 170px;
 }
 
+fieldset {
+    border: none;
+}
+
+fieldset legend {
+    display: none;
+}
+
 .sec-inp {
     display: flex;
     justify-content: center;
@@ -104,6 +112,11 @@ body {
     font-size: 12px;
     cursor: pointer;
     color: white;
+}
+
+.imed-go ul li a {
+    color: white;
+    align-items: center;
 }
 
 .imed-go ul li:hover {
