--- a/reset.css
+++ b/reset.css
@@ -14,3 +14,13 @@ a {
 a:link {
     color: black;
 }
+
+
+.blind {
+    position: absolute;
+    clip: rect(0, 0, 0, 0);
+    overflow: hidden;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+}
