--- a/Ejey_last/scss/_mixin.scss
+++ b/Ejey_last/scss/_mixin.scss
@@ -30,3 +30,32 @@ $h : 20%;
 @mixin ir($img,$size) {
 
 }
+
+@mixin border($r) {
+    $r: unitCheck($r);
+    -ms-border-radius: $r;
+    -webkit-border-radius: $r;
+    border-radius: $r;
+}
+
+@mixin modal($w, $h, $bg) {
+    width: 100%; height: 100%;
+    max-width: unitCheck($w);
+    max-height: unitCheck($h);
+    background-color: $bg;
+    position: fixed;
+    left: 50%; top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+@function unitCheck($x) { 
+
+    // 단위체크
+    @if(type-of($x)==number) {
+        @if(unitless($x)) {
+            @return $x+px;
+        }
+    }
+
+    @return $x;
+}
