아인스미디어 클론코딩(fullPage 구현)

--- a/Ejey_last/scss/_mixin.scss
+++ b/Ejey_last/scss/_mixin.scss
@@ -17,6 +17,37 @@
     background:url($url + $img) no-repeat center center/$size;
 }
 
+
+@function unitCheck($x) {  
+    // 단위체크
+    @if(type-of($x)==number) {
+        @if(unitless($x)) {
+            @return $x+px;
+        } 
+    } 
+    @return $x;
+}
+
+@mixin radius($r) { 
+    $r:unitCheck($r);
+    -ms-border-radius:$r;
+    -webkit-border-radius:$r;
+    border-radius: $r; 
+}
+
+
+@mixin modal($w, $h, $bg) {
+    $w: unitCheck($w);
+    $h: unitCheck($h); 
+    width: $w;
+    height: $h;
+    background-color: $bg;
+    position: fixed;
+    left: 50%; top: 50%; 
+    transform:translate(-50%, -50%);
+    box-shadow:0 0 10px rgba(#000,0.8);
+}
+
 // #{변수}
 
 $w : 300px;
@@ -29,33 +60,4 @@ $h : 20%;
 
 @mixin ir($img,$size) {
 
-}
-
-@mixin border($r) {
-    $r: unitCheck($r);
-    -ms-border-radius: $r;
-    -webkit-border-radius: $r;
-    border-radius: $r;
-}
-
-@mixin modal($w, $h, $bg) {
-    width: 100%; height: 100%;
-    max-width: unitCheck($w);
-    max-height: unitCheck($h);
-    background-color: $bg;
-    position: fixed;
-    left: 50%; top: 50%;
-    transform: translate(-50%, -50%);
-}
-
-@function unitCheck($x) { 
-
-    // 단위체크
-    @if(type-of($x)==number) {
-        @if(unitless($x)) {
-            @return $x+px;
-        }
-    }
-
-    @return $x;
 }
